Fixed z-index.

--- a/app/assets/stylesheets/bsat/_page.scss
+++ b/app/assets/stylesheets/bsat/_page.scss
@@ -16,7 +16,7 @@
       right: 0;
       left: $bsat-sidebar-width;
       top: $navbar-height;
-      z-index: 50;
+      z-index: 1000;
 
       #sidebar-toggle-button {
         position: absolute;
