--- a/app/assets/stylesheets/bsat/_sidebar.scss
+++ b/app/assets/stylesheets/bsat/_sidebar.scss
@@ -1,6 +1,6 @@
 #sidebar {
   position: fixed;
-  z-index: 100;
+  z-index: 1001;
   top: $navbar-height;
   bottom: 0;
   width: $bsat-sidebar-width;
